--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ configurations.all {
 repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://maven.google.com" }
 }
 
 dependencies {
@@ -49,5 +50,11 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
+
     compile 'com.android.support:design:26.1.0'
+
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
 }
