--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.flying.xiaopo:sticker:1.6.0'
 
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
