--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     compile 'com.flying.xiaopo:sticker:1.6.0'
 
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
 }
