--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    compile 'org.apache.commons:commons-lang3:3.8'
 }
