--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.relylabs.around.models.User" />
+            android:value="com.relylabs.around.models.User, com.relylabs.around.models.NewsFeedElement" />
 
 
         <activity
