Renamed to NearTag

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.relylabs.around"
+        applicationId "com.relylabs.neartag"
         minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
