--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.relylabs.around">
+    package="com.relylabs.neartag">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,7 +15,7 @@
 
 
     <application
-        android:name=".App"
+        android:name="com.relylabs.neartag.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -37,23 +37,23 @@
 
         <provider
             android:name="com.activeandroid.content.ContentProvider"
-            android:authorities="com.relylabs.around"
+            android:authorities="com.relylabs.neartag"
             android:exported="false" />
 
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="AroundDB" />
+            android:value="NearTagFB" />
         <meta-data
             android:name="AA_DB_VERSION"
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.relylabs.around.models.User, com.relylabs.around.models.NewsFeedElement" />
+            android:value="com.relylabs.neartag.models.User, com.relylabs.neartag.models.NewsFeedElement" />
 
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity">
+            android:name="com.relylabs.neartag.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
