--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.relylabs.neartag"
         minSdkVersion 21
@@ -30,13 +30,16 @@ repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     maven { url "https://maven.google.com" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-compat:27.1.1'
+  //  implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+  //  implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -50,20 +53,23 @@ dependencies {
     // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
 
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+  //  compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:27.1.1'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
 
-    compile 'com.android.support:design:26.1.0'
-
+    //compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
+//    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.flying.xiaopo:sticker:1.6.0'
-
-    compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
     compile 'org.apache.commons:commons-lang3:3.8'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    compile 'com.github.ybq:Android-SpinKit:1.1.0'
 }
