--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
 
     implementation 'com.ethanhua:skeleton:1.1.1'
     implementation 'io.supercharge:shimmerlayout:2.1.0'
+    compile 'com.amplitude:android-sdk:2.16.0'
 }
