--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.relylabs.neartag"
+        applicationId "com.neartag.in"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
