--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.relylabs.neartag">
+    package="com.neartag.in">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,7 +15,7 @@
 
 
     <application
-        android:name="com.relylabs.neartag.App"
+        android:name="com.neartag.in.App"
         android:allowBackup="true"
         android:icon="@mipmap/neartag_launcher"
         android:label="@string/app_name"
@@ -37,7 +37,7 @@
 
         <provider
             android:name="com.activeandroid.content.ContentProvider"
-            android:authorities="com.relylabs.neartag"
+            android:authorities="com.neartag.in"
             android:exported="false" />
 
         <meta-data
@@ -48,12 +48,12 @@
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.relylabs.neartag.models.User, com.relylabs.neartag.models.NewsFeedElement" />
+            android:value="com.neartag.in.models.User, com.neartag.in.models.NewsFeedElement" />
 
 
         <activity
             android:screenOrientation="portrait"
-            android:name="com.relylabs.neartag.MainActivity">
+            android:name="com.neartag.in.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,7 +61,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.relylabs.neartag.registration.SmsReceiver">
+        <receiver android:name="com.neartag.in.registration.SmsReceiver">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
