--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,7 @@ dependencies {
 
     //compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:design:27.1.1'
-    compile 'com.google.android.gms:play-services-maps:15.0.1'
-    compile 'com.google.android.gms:play-services-location:15.0.1'
+
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 //    compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:27.1.1'
@@ -76,4 +75,9 @@ dependencies {
     implementation 'com.ethanhua:skeleton:1.1.1'
     implementation 'io.supercharge:shimmerlayout:2.1.0'
     compile 'com.amplitude:android-sdk:2.16.0'
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    compile 'com.google.firebase:firebase-messaging:17.3.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
