--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,22 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
         
-      # run tests!
-      - run: gradle test
+       - run:
+          name: Run Tests
+          command: |
+                  sudo chmod +x gradlew
+                  ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
+      - run:
+          name: Initial build
+          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: apks/
 
 
 
