--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
 
     environment:
       JVM_OPTS: -Xmx3200m
+      KEYSTORE: ${HOME}/${CIRCLE_PROJECT_REPONAME}/signing.keystore
+
     steps:
       - checkout
       - restore_cache:
@@ -40,6 +42,12 @@ jobs:
           command: |
                   sudo chmod +x gradlew
              #     ./gradlew lint test
+      - run:
+          name: Chmod permissions download_keystore.sh
+          command: sudo chmod +x ./misc/download_keystore.sh
+      - run:
+          name: Get private keys etc
+          command: ./misc/download_keystore.sh
       - store_artifacts:
           path: app/build/reports
           destination: reports
