--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
       - checkout
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run: echo $ENCODED_KEYSTORE | base64 --decode >> ${HOME}/repo/keystore.jks
+      - run: echo 'export KEYSTORE=${HOME}/repo/keystore.jks' >> $BASH_ENV
 #      - run:
 #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this. 
 #         command: sudo chmod +x ./gradlew
