--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         applicationId "com.neartag.in"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 6
+        versionCode 7
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -86,6 +86,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.google.firebase:firebase-core:16.0.3'
     compile 'com.google.firebase:firebase-messaging:17.3.1'
+    compile 'com.github.shts:StoriesProgressView:3.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
