--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.3'
     compile 'com.google.firebase:firebase-messaging:17.3.1'
     compile 'com.github.shts:StoriesProgressView:3.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
