--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
     <application
         android:name="com.relylabs.instahelo.App"
         android:allowBackup="true"
-        android:icon="@mipmap/neartag_launcher"
+        android:icon="@drawable/logo_square"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/neartag_launcher_circle"
+        android:roundIcon="@drawable/logo_circle"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:theme="@style/DialogTheme">
